Add project card component

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,6 @@
 @import './base/settings';
 @import './base/base';
-@import './components/footer'
+@import './components/footer';
+@import './components/contact';
+@import './components/education';
+@import './components/projects'
