--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -1,3 +1,8 @@
+.contact{
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 3em;
+}
 .contact-inline {
     display: flex !important;
     flex-direction: row !important;
@@ -10,9 +15,31 @@
 
 .contact-inline button {
     flex-grow: 1;
+    background-color: $primcolor !important;
+    color: $seccolor !important;
+    border: none;
+    outline: none;
 }
 
 .contact-form input, .contact-form textarea {
-    background-color: transparent !important;
-    color: white !important;
+    background-color: $thdcolor !important;
+    color: $seccolor !important;
+    border: none;
+    outline: none;
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    outline: none !important;
+    border: none !important;
+}
+
+.contact-form label {
+    color: $seccolor !important;
+
+}
+
+.contact h2 {
+    color: $primcolor;
+    font-size: 2.7em;
+    font-weight: 800;
 }
