--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,4 +3,6 @@
 @import './components/footer';
 @import './components/contact';
 @import './components/education';
-@import './components/projects'
+@import './components/projects';
+@import './components/intro';
+@import './components/skills'
