--- a/src/styles/components/_education.scss
+++ b/src/styles/components/_education.scss
@@ -1,6 +1,41 @@
+.education{
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 3em;
+}
+
+.education h2 {
+    color: $primcolor;
+    font-size: 2.7em;
+    font-weight: 800;
+}
+
 .education .card {
     background-color: transparent !important;
     height: 100% !important;
-    border: 1px solid white !important;
-    border-radius: 0;
+    border: none !important;
+}
+
+.education .card-title mark {
+    color: $seccolor;
+    background-color: $primcolor !important;
+}
+
+.education .card-text mark {
+    color: $seccolor;
+    background-color: $thdcolor !important;
+}
+
+.education .row {
+    position: relative;
+    transition: ease-in-out;
+    animation-name: transition;
+    animation-duration: 1.5s;
+    animation-play-state: paused;
+    animation-iteration-count: 1;
+}
+
+@keyframes transition {
+    from {left: 100vw}
+    to {left: 0;}
 }
