--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,3 +1,18 @@
 .footer {
-    padding: 2em;
+    color: $seccolor;
+    background-color: $primcolor;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 2.5em 0;
+    margin-top: 4em;
+
+}
+.social-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.social-links h4 {
+    padding: 0 .3em;
 }
