--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -1,3 +1,32 @@
+.projects{
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 3em;
+}
+
+.projects h2 {
+    color: $primcolor;
+    font-size: 2.7em;
+    font-weight: 800;
+}
+
 .projects .card {
-    height: 100% !important;
+    background-color: transparent !important;
+    border: none;
+}
+
+.projects .card-title mark, .projects .card-text mark {
+    color: $seccolor;
+    background-color: $primcolor;
+}
+
+.projects .card-footer {
+    background-color: transparent !important;
+    border: none;
+    padding-top: 0;
+}
+
+.projects .card-footer mark {
+    color: $seccolor;
+    background-color: $thdcolor;
 }
