--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -6,3 +6,26 @@ body {
     position: absolute;
     overflow-x: hidden !important;
 }
+
+@media only screen and (max-width: 585px) {
+    .intro h1{
+      font-size: 3.5em !important;
+    }
+    .contact .contact-inline{
+      flex-direction: column !important;
+    }
+    .contact-inline .form-floating{
+      width: 100% !important;
+      margin-right: 0 !important;
+      padding: 0 !important;
+      margin-bottom: 1em !important;
+    }
+    .contact-inline button {
+      padding: 1em 0;
+    }
+    .footer {
+      flex-direction: column !important;
+      justify-content: center;
+      align-items: center;
+    }
+  }
