--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -16,3 +16,8 @@
 .social-links h4 {
     padding: 0 .3em;
 }
+
+.footer a {
+    text-decoration: none !important;
+    color: inherit !important;
+}
