--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -1,8 +1,8 @@
 .intro {
     width: 80%;
-    height: 100vh;
-    margin: 0 auto;
-    padding-top: 8em;
+    margin: 8em auto;
+    padding-top: 3em;
+    padding-bottom: 3em;
 }
 .intro h1 {
     font-weight: 800;
@@ -22,4 +22,13 @@
     background-color: white;
     color: $primcolor;
     font-weight: 800;
+}
+
+.intro .alert-light {
+    display: none;
+    position: absolute;
+    top: 2em;
+    text-align: center;
+    width: 80%;
+    border-radius: 0;
 }
