--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -27,9 +27,9 @@
 
 .skills .row {
     position: relative;
-    transition: ease-in-out;
+    transition: ease-in;
     animation-name: transition;
-    animation-duration: 1.5s;
+    animation-duration: 1s;
     animation-play-state: paused;
     animation-iteration-count: 1;
 }
