--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,4 +5,5 @@
 @import './components/education';
 @import './components/projects';
 @import './components/intro';
-@import './components/skills'
+@import './components/skills';
+@import './components/projectCard.scss';
