--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,4 +6,4 @@
 @import './components/projects';
 @import './components/intro';
 @import './components/skills';
-@import './components/projectCard.scss';
+@import './components/projectCard';
