Update user interface

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,6 @@
 // global style variables
 $primfont: 'Cousine', monospace;
-$primcolor: #274472;
-$seccolor: #C3E0E5;
-$thdcolor: #41729F;
-$morebtncolor: #726a27;
+$primcolor: #C3E0E5;
+$seccolor: #274472;
+$thdcolor: #C3E0E5;
+$morebtncolor: #ffffff;
